# LLVM-Clang-MSBuild

./: CMakeLists.txt  CMakeSettings.json  README.md  install.bat
llvm/tools/msbuild/: CMakeLists.txt  install-modern.bat  install.bat  uninstall.bat
