cmake_minimum_required (VERSION 2.8.0)

project (LLVM-Clang-MSBuild)

set(CPACK_PACKAGE_INSTALL_REGISTRY_KEY "LLVM")
if(NOT DEFINED LLVM_VERSION_MAJOR)
  set(LLVM_VERSION_MAJOR 6)
endif()
if(NOT DEFINED LLVM_VERSION_MINOR)
  set(LLVM_VERSION_MINOR 0)
endif()
set(REG_KEY "${CPACK_PACKAGE_INSTALL_REGISTRY_KEY}")
set(LIB_PATH_VERSION "${LLVM_VERSION_MAJOR}.${LLVM_VERSION_MINOR}")

add_subdirectory ("${CMAKE_SOURCE_DIR}/llvm/tools/msbuild")
